--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,11 @@
       "email": "thiagom.devsec@gmail.com"
     }
   ],
+  "autoload": {
+    "psr-4": {
+      "Narcissus\\": "src/"
+    }
+  },
   "require": {
     "vlucas/phpdotenv": "^5.5",
     "guzzlehttp/guzzle": "^7.0"
