--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,12 @@
   "require": {
     "vlucas/phpdotenv": "^5.5",
     "guzzlehttp/guzzle": "^7.0"
+  },
+  "scripts": {
+    "phpcs":  "phpcs --standard=PSR12",
+    "phpcbf":  "phpcbf --standard=PSR12"
+  },
+  "require-dev": {
+    "squizlabs/php_codesniffer": "*"
   }
 }
